--- a/teht4/public/index.html
+++ b/teht4/public/index.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,15 +13,15 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>React App</title>
+    <title>JSON</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
-</html>-->
+</html>
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="fi">
   <head>
     <meta charset="utf-8" />
@@ -62,4 +62,4 @@
       }
     </script>
   </body>
-</html>
+</html>-->
